--- a/BackSiteTemplate/Views/Shared/_Layout.cshtml
+++ b/BackSiteTemplate/Views/Shared/_Layout.cshtml
@@ -49,10 +49,10 @@
                     </ul>
                     <div class="form-inline my-2 my-lg-0">
                         <a class="text-light mr-3">@UserData.Name</a>
-                        <form asp-controller="Home" asp-action="ChangePwd">
+                        <form asp-controller="Home" asp-action="ChangePwd" method="get">
                             <button class="btn btn-primary my-2 my-sm-0 mr-1" type="submit">變更密碼</button>
                         </form>
-                        <form asp-controller="Home" asp-action="Logout">
+                        <form asp-controller="Home" asp-action="Logout" >
                             <button class="btn btn-danger my-2 my-sm-0" type="submit">登出</button>
                         </form>
 
